# oopsai-ai

./: .gitignore  PROJECT_SPEC.md
.claude/: settings.local.json
.codex-tmp/docs-and-design-main/docs-and-design-main/: .gitignore  README.md
.codex-tmp/docs-and-design-main/docs-and-design-main/wireframes/: index.html
.codex-tmp/docs-and-design-main/docs-and-design-main/기술설계/: 01_소프트웨어_아키텍처.md  02_클라우드_인프라_견적.md  03_DB_스키마.md  04_API_명세서.md
.codex-tmp/docs-and-design-main/docs-and-design-main/기획/: 01_전체_시스템_구조도.md  02_권한별_화면_목록.md  03_바텀_네비_구성.md  04_화면_구조도.md  05_MVP_기능_플로우.md  06_유저_플로우.md
backend/: .env.example  accident.db  main.py  pyproject.toml  requirements.txt
backend/data/: severity_scenarios.json
backend/models/: schemas.py
backend/routers/: action_image.py  admin.py  analyze.py  cases.py
backend/scripts/: evaluate_analyze_scenarios.py  evaluate_normalize_scenarios.py  evaluate_severity_scenarios.py  init_db.py
backend/services/: ai_cache.py  classification_rules.py  db.py  llm_engine.py  severity_engine.py  taxonomy.py
data/: 아차사고_표준화_3시트_v2.xlsx
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AiBubble.tsx  AiDebugPanel.tsx  AiFactorStatusPanel.tsx  ChipSelector.tsx  ConfirmScreen.tsx  ProgressBar.tsx  STTButton.tsx
frontend/src/constants/: chips.ts
frontend/src/dev/: incidentScenarios.ts
frontend/src/pages/: DevIncidentScenarios.tsx  InputFlow.tsx  ResultDetail.tsx
frontend/src/types/: api.ts
(+6 files in other folders)
