[project]
name = "oopsai-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for near-miss prevention AI system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "openai>=1.100.0",
]

[tool.uv]
package = false
